# darwinio

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  requirements.txt
documentation/: characteristics.ods  doc.md  earlystages.md  implementation.md
src/: brain.py  constants.py  distribution.py  genome.py  graphical_components.py  graphical_sim.py  graphical_utilities.py  main.py  organism.py  text_sim.py  utilities.py
src/darwinio/: __main__.py  brain.py  constants.py  distribution.py  genome.py  graphical_sim.py  main.py  organism.py  statistics.py  stats.py  text_sim.py  theme.json
