[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build]
exclude = [
  "*.wav",
]

[project]
name = "darwinio"
version = "0.0.1"
authors = [
  { name="Tushar Maharana", email="tusharhero@sdf.org" },
  { name="Mihir Nallagonda", email="adhikshithamihir@gmail.com" },
]
description = "An evolution simulator"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
"numpy==1.24.3",
"pygame-ce==2.2.1",
"pygame-gui==0.6.9",
"nilsimsa==0.3.8",
]

[project.urls]
"Homepage" = "https://github.com/tusharhero/darwinio"
"Bug Tracker" = "https://github.com/tusharhero/darwinio/issues"