[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build]
exclude = [
  "*.wav",
]

[project]
name = "darwinio"
version = "0.4.0"
authors = [
  { name="Tushar Maharana", email="tusharhero@sdf.org" },
  { name="Mihir Nallagonda", email="adhikshithamihir@gmail.com" },
]
description = "An evolution simulator"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
"numpy",
"pygame-ce>=2.2.1",
"pygame-gui>=0.6.9",
"nilsimsa>=0.3.8",
]
scripts = { darwinio = "darwinio.__main__:cli" }

[project.urls]
"Homepage" = "https://github.com/tusharhero/darwinio"
"Bug Tracker" = "https://github.com/tusharhero/darwinio/issues"